# VSharp

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  Common.props  Common.ruleset  DaemonStageProcess.fs  README.md  VSharp.sln  appveyor.yml  global.json  requirements.txt
.config/: dotnet-tools.json
Advanced.Algorithms/: Advanced.Algorithms.csproj
BizHawk/: MainSlnCommon.props
Lifetimes/: Lifetimes.csproj
LoanExam/: CreditCalculator.cs  EmploymentHandler.cs  Endpoint.cs  LoanExam.csproj  Program.cs
LoanExamTests/: LoanExamTests.csproj  UnitTest1.cs  issues.md
Runner/: Program.cs  Runner.csproj
TempTest/: TempTest.csproj  Testbed.cs
VSharp.AIAgent/: Readme.md  agent.py
VSharp.API/: DependencyResolver.cs  GeneratedTestInfo.cs  Options.cs  Parameters.cs  StatisticsReporter.cs  SvmOptions.cs  VSharp.API.csproj  VSharp.cs  VSharpOptions.cs
VSharp.CSharpUtils/: ArrayUtils.cs  BlockChain.cs  CLRConfig.cs  Calculator.cs  CharUnicodeInfo.cs  CompositeCompilationAssemblyResolver.cs  CultureInfoUtils.cs  DateTimeUtils.cs  DebugProviderUtils.cs  DelegateUtils.cs  DiagnosticsUtils.cs  DotnetExecutablePath.cs  EnvironmentUtils.cs  Exceptions.cs  ExternMocker.cs  GCUtils.cs  ImplementsAttribute.cs  Interop.cs  JetBrainsDiagnosticsUtils.cs  LayoutUtils.cs  ListUtils.cs  MonitorUtils.cs  NumberFormatInfo.cs  ProcessUtils.cs  ReferenceEqualityComparer.cs  ReflectionUtils.cs  RuntimeHelpers.cs  StringUtils.cs  TaskExtensions.cs  ThreadUtils.cs  TimeSpanBuilders.cs  VSharp.CSharpUtils.csproj  VSharpAssemblyLoadContext.cs
VSharp.ClrInteraction/: CMakeLists.txt  VSharp.ClrInteraction.def  VSharp.ClrInteraction.vcxproj  classFactory.cpp  classFactory.h  corProfiler.cpp  corProfiler.h  dllmain.cpp  instrumenter.cpp  instrumenter.h  logging.cpp  logging.h  probes.h  profiler_pal.h  profiler_unix.h  profiler_win.h  reflection.cpp  reflection.h  run.sh  sigparse.h
VSharp.ClrInteraction/communication/: communicator.h  protocol.cpp  protocol.h  unixFifoCommunicator.cpp  windowsFifoCommunicator.cpp
VSharp.ClrInteraction/instrumentation/: ilRewriter.cpp  ilRewriter.h  instrumenter.cpp  instrumenter.h  probes.h  reflection.cpp  reflection.h  sigparse.h
VSharp.ClrInteraction/memory/: heap.cpp  heap.h  intervalTree.h  memory.cpp  memory.h  stack.cpp  stack.h  storage.cpp  storage.h
VSharp.Core/: App.config  AssemblyInfo.fs  HornSolverDaemonStageProcess.fs  VSharp.Core.fsproj
VSharp.CoverageInstrumenter/: CMakeLists.txt  ILRewriter.cpp  ILRewriter.h  VSharp.CoverageInstrumenter.def  VSharp.CoverageInstrumenter.vcxproj  cComPtr.h  classFactory.cpp  corProfiler.cpp  corProfiler.h  dllmain.cpp  instrumenter.cpp  instrumenter.h  logging.cpp  logging.h  memory.cpp  memory.h  probes.cpp  probes.h
VSharp.CoverageInstrumenter/memory/: memory.cpp  memory.h  stack.cpp  stack.h
VSharp.CoverageInstrumenter/profiler/: ILRewriter.cpp  ILRewriter.h  api.cpp  api.h  corProfiler.cpp  corProfiler.h  coverageTracker.cpp  coverageTracker.h  instrumenter.cpp  instrumenter.h  logging.cpp  logging.h  memory.cpp  memory.h  os.h  probes.cpp  probes.h  profiler.h  profilerDebug.h  profilerState.cpp  profilerState.h  profiler_assert.h  serialization.h  threadInfo.cpp  threadInfo.h  threadStorage.h  threadTracker.cpp  threadTracker.h
VSharp.CoverageInstrumenter/unix/: os.cpp
VSharp.CoverageInstrumenter/win/: os.cpp  vsharpCoverage.def
VSharp.CoverageRunner/: CoverageRunner.cs  VSharp.CoverageRunner.csproj
VSharp.CoverageTool/: CoverageTool.fs  VSharp.CoverageTool.fsproj
VSharp.ExecuteTests/: ExecuteTests.cs  VSharp.ExecuteTests.csproj
VSharp.Explorer/: AISearcher.fs  BidirectionalSearcher.fs  CombinedWeighter.fs  ContributedCoverageSearcher.fs  DFSSortedByContributedCoverageSearcher.fs  DistanceWeighter.fs  ExecutionTree.fs  ExecutionTreeSearcher.fs  Explorer.fs  FairSearcher.fs  GuidedSearcher.fs  InterleavedSearcher.fs  Options.fs  Searcher.fs  Statistics.fs  VSharp.Explorer.fsproj
VSharp.Fuzzer/: Application.fs  Communication.fs  CoverageTool.fs  Fuzzer.fs  Generator.fs  Interaction.fs  Logger.fs  Program.fs  Startup.fs  TestGeneration.fs  TypeSolver.fs  Utils.fs  VSharp.Fuzzer.fsproj
VSharp.FuzzerTestRunner/: Program.fs  VSharp.FuzzerTestRunner.fsproj
VSharp.GeneratedTests/: VSharp.GeneratedTests.csproj
VSharp.Guide/: CMakeLists.txt  ConsoleApp2.deps.json  ConsoleApp2.runtimeconfig.dev.json  ConsoleApp2.runtimeconfig.json  corProfiler.cpp  corProfiler.h  environment.txt  logging.h  probes.cpp  probes.h
VSharp.Guide/communication/: protocol.cpp  protocol.h
VSharp.Guide/instrumentation/: ilRewriter.cpp  ilRewriter.h  instructions.h  instrumenter.cpp  instrumenter.h  reflection.cpp  reflection.h
VSharp.IL/: CFG.fs  CallGraph.fs  CodeLocation.fs  Communication.fs  Coverage.fs  DotVisualizer.fs  ILRewriter.fs  Instruction.fs  Loader.fs  MethodBody.fs  OpCodes.fs  Reachability.fs  Serializer.fs  VSharp.IL.fsproj
VSharp.Integration/: DaemonStage.cs  DaemonStageProcess.cs  HornDaemonStage.cs  VSharp.Integration.csproj  VSharp.nuspec  ZoneMarker.cs  packages.config
VSharp.InternalCalls/: Activator.fs  Activator.fsi  AspNet.fs  AspNet.fsi  Buffer.fs  Buffer.fsi  ByReference.fs  ByReference.fsi  ChessDotNet.fs  ChessDotNet.fsi  DateTime.fs  DateTime.fsi  Delegate.fs  Delegate.fsi  Diagnostics.fs  Diagnostics.fsi  Dictionary.fs  Dictionary.fsi  Enum.fs  Enum.fsi  Environment.fs  Environment.fsi  EqualityComparer.fs  EqualityComparer.fsi  Globalization.fs  Globalization.fsi  HashHelpers.fs  HashHelpers.fsi  Helpers.fs  IntPtr.fs  IntPtr.fsi  Interlocked.fs  Interlocked.fsi  InteropServices.fs  InteropServices.fsi  List.fs  List.fsi  Loader.fs  Math.fs  Math.fsi  (+33 more)
VSharp.ML.AIAgent/: .gitignore  Readme.md  agent.py  conda_env.yml  conda_env_install.sh  config.py  constants.py  eval.py  evaluate_model.py  game.py  genetic_learn.py  install_amd.sh  install_env.sh  install_script.sh  launch_servers.py  main.py  messages.py  predict_state_hetero.py  pretrain.py  r_learn.py  readme.md  run_common_model_training.py
VSharp.ML.GameMaps/: AStar.cs  AVL_Tree.cs  (+24 more)
(+3964 files in other folders)
